--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,12 @@
+<!-- <div class="people-page">
+  <div class="people-header">
+    <div class="title-section">
+      <h1>People</h1>
+      <p>Explore the people you follow</p>
+    </div>
+  </div>
+</div> -->
+
 <div class="home-container" [ngClass]="columnLayout()">
   <!-- Header Section -->
   <header class="header-section">
@@ -26,324 +35,152 @@
   </div>
   }
 
-  <!-- Navigation Tabs -->
-  <nav class="navigation-tabs">
-      <mat-tab-group
-    [selectedIndex]="selectedTabIndex()"
-    (selectedIndexChange)="selectTab($event)">
-    
-    <!-- Draggable tabs -->
-    <div cdkDropList cdkDropListOrientation="horizontal" 
-         (cdkDropListDropped)="onTabDrop($event)"
-         class="tabs-list">
-      
-      @for (link of navLinks(); track link.id; let i = $index) {
-        <mat-tab cdkDrag [routerLink]="link.path">
-          <ng-template mat-tab-label>
-            <div class="tab-label">
-              <div cdkDragHandle class="drag-handle">
-                <mat-icon>drag_indicator</mat-icon>
-              </div>
-              <mat-icon>{{ link.icon }}</mat-icon>
-              <span>{{ link.label }}</span>
-              <button mat-icon-button 
-                      class="tab-menu-button"
-                      [matMenuTriggerFor]="tabMenu" 
-                      (click)="$event.stopPropagation()">
-                <mat-icon>more_vert</mat-icon>
-              </button>
-              <mat-menu #tabMenu="matMenu">
-                <button mat-menu-item (click)="editFeed(i)">
-                  <mat-icon>edit</mat-icon>
-                  <span>Edit</span>
-                </button>
-                <button mat-menu-item (click)="removeFeed(i)">
-                  <mat-icon>delete</mat-icon>
-                  <span>Remove</span>
-                </button>
-              </mat-menu>
-            </div>
-          </ng-template>
-          
-          <!-- Tab content will be router outlet -->
-        </mat-tab>
-      }
-    </div>
-    
-    <!-- "+" button as a tab -->
-    <mat-tab>
-      <ng-template mat-tab-label>
-        <button mat-icon-button (click)="addNewFeed(); $event.stopPropagation()">
+  <!-- Column navigation for mobile view -->
+  @if (isMobileView()) {
+    <div class="column-navigation">
+      <div class="column-selector">
+        @for (column of columns(); track column.id; let i = $index) {
+          <button 
+            class="column-selector-button" 
+            [class.active]="i === visibleColumnIndex()"
+            (click)="selectColumn(i)">
+            <mat-icon>{{ column.icon }}</mat-icon>
+            <span>{{ column.label }}</span>
+          </button>
+        }
+        <!-- Add new column button -->
+        <button class="column-selector-button add-column" (click)="addNewColumn()">
           <mat-icon>add</mat-icon>
         </button>
-      </ng-template>
-    </mat-tab>
-  </mat-tab-group>
-
-
-
-    <mat-tab-group [selectedIndex]="activeSection() === 'discover' ? 0 : activeSection() === 'following' ? 1 : 2"
-      (selectedIndexChange)="setActiveSection($event === 0 ? 'discover' : $event === 1 ? 'following' : 'media')">
-
-      <!-- Draggable tabs -->
-      <div cdkDropList cdkDropListOrientation="horizontal" (cdkDropListDropped)="onTabDrop($event)" class="tabs-list">
-
-        <!-- Discover Tab -->
-        <mat-tab cdkDrag>
-          <ng-template mat-tab-label>
-            <div class="tab-label">
-              <div cdkDragHandle class="drag-handle">
-                <mat-icon>drag_indicator</mat-icon>
-              </div>
-              <mat-icon>explore</mat-icon>
-              <span>Discover</span>
-              <button mat-icon-button class="tab-menu-button" [matMenuTriggerFor]="discoverMenu"
-                (click)="$event.stopPropagation()">
-                <mat-icon>more_vert</mat-icon>
-              </button>
-              <mat-menu #discoverMenu="matMenu">
-                <button mat-menu-item>
-                  <mat-icon>edit</mat-icon>
-                  <span>Edit</span>
-                </button>
-                <button mat-menu-item (click)="refreshContent()">
-                  <mat-icon>refresh</mat-icon>
-                  <span>Refresh</span>
-                </button>
-              </mat-menu>
-            </div>
-          </ng-template>
-        </mat-tab>
-
-        <!-- Following Tab -->
-        <mat-tab cdkDrag>
-          <ng-template mat-tab-label>
-            <div class="tab-label">
-              <div cdkDragHandle class="drag-handle">
-                <mat-icon>drag_indicator</mat-icon>
-              </div>
-              <mat-icon>people</mat-icon>
-              <span>Following</span>
-              <button mat-icon-button class="tab-menu-button" [matMenuTriggerFor]="followingMenu"
-                (click)="$event.stopPropagation()">
-                <mat-icon>more_vert</mat-icon>
-              </button>
-              <mat-menu #followingMenu="matMenu">
-                <button mat-menu-item (click)="editSection('following')">
-                  <mat-icon>edit</mat-icon>
-                  <span>Edit</span>
-                </button>
-                <button mat-menu-item (click)="refreshContent()">
-                  <mat-icon>refresh</mat-icon>
-                  <span>Refresh</span>
-                </button>
-              </mat-menu>
-            </div>
-          </ng-template>
-        </mat-tab>
-
-        <!-- Media Tab -->
-        <mat-tab cdkDrag>
-          <ng-template mat-tab-label>
-            <div class="tab-label">
-              <div cdkDragHandle class="drag-handle">
-                <mat-icon>drag_indicator</mat-icon>
-              </div>
-              <mat-icon>perm_media</mat-icon>
-              <span>Media</span>
-              <button mat-icon-button class="tab-menu-button" [matMenuTriggerFor]="mediaMenu"
-                (click)="$event.stopPropagation()">
-                <mat-icon>more_vert</mat-icon>
-              </button>
-              <mat-menu #mediaMenu="matMenu">
-                <button mat-menu-item (click)="editSection('media')">
-                  <mat-icon>edit</mat-icon>
-                  <span>Edit</span>
-                </button>
-                <button mat-menu-item (click)="refreshContent()">
-                  <mat-icon>refresh</mat-icon>
-                  <span>Refresh</span>
-                </button>
-              </mat-menu>
-            </div>
-          </ng-template>
-        </mat-tab>
       </div>
+    </div>
+  }
 
-      <!-- "+" button as a tab -->
-      <mat-tab>
-        <ng-template mat-tab-label>
-          <button mat-icon-button (click)="addNewSection(); $event.stopPropagation()">
+  <!-- Columns Container -->
+  <div class="columns-container">
+    <!-- Column Headers (Desktop Only) for Drag/Drop and Reordering -->
+    @if (!isMobileView()) {
+      <div class="column-headers" cdkDropList cdkDropListOrientation="horizontal" (cdkDropListDropped)="onColumnDrop($event)">
+        @for (column of columns(); track column.id; let i = $index) {
+          <div class="column-header" cdkDrag>
+            <div class="column-header-content">
+              <div class="drag-handle" cdkDragHandle>
+                <mat-icon>drag_indicator</mat-icon>
+              </div>
+              <mat-icon>{{ column.icon }}</mat-icon>
+              <span class="column-title">{{ column.label }}</span>
+              <div class="column-header-actions">
+                <button mat-icon-button [matMenuTriggerFor]="columnMenu" (click)="$event.stopPropagation()">
+                  <mat-icon>more_vert</mat-icon>
+                </button>
+                <mat-menu #columnMenu="matMenu">
+                  <button mat-menu-item (click)="editColumn(i)">
+                    <mat-icon>edit</mat-icon>
+                    <span>Edit</span>
+                  </button>
+                  <button mat-menu-item (click)="removeColumn(i)">
+                    <mat-icon>delete</mat-icon>
+                    <span>Remove</span>
+                  </button>
+                </mat-menu>
+              </div>
+            </div>
+            
+            <!-- Preview for drag operation -->
+            <ng-template cdkDragPreview>
+              <div class="column-drag-preview">
+                <mat-icon>{{ column.icon }}</mat-icon>
+                <span>{{ column.label }}</span>
+              </div>
+            </ng-template>
+          </div>
+        }
+        
+        <!-- Add column button -->
+        <div class="column-header add-column">
+          <button mat-icon-button (click)="addNewColumn()" matTooltip="Add new column">
             <mat-icon>add</mat-icon>
           </button>
-        </ng-template>
-      </mat-tab>
-    </mat-tab-group>
-  </nav>
-
-  <!-- Content Section -->
-  <div class="content-section">
-    <!-- Discover Section -->
-    @if (activeSection() === 'discover') {
-    <div class="discover-feed feed-container">
-      @for (event of filteredTrending(); track event.id) {
-      <mat-card class="content-card">
-        <mat-card-header>
-          <div mat-card-avatar class="avatar"></div>
-          <mat-card-title>User {{ event.pubkey.substring(0, 8) }}</mat-card-title>
-          <mat-card-subtitle>{{ event.created_at | date:'medium' }}</mat-card-subtitle>
-          <div class="card-actions">
-            <button mat-icon-button [matMenuTriggerFor]="menu">
-              <mat-icon>more_vert</mat-icon>
-            </button>
-            <mat-menu #menu="matMenu">
-              <button mat-menu-item (click)="shareContent(event)">
-                <mat-icon>share</mat-icon>
-                <span>Share</span>
-              </button>
-              <button mat-menu-item (click)="bookmarkContent(event)">
-                <mat-icon>bookmark</mat-icon>
-                <span>Bookmark</span>
-              </button>
-            </mat-menu>
-          </div>
-        </mat-card-header>
-        <mat-card-content>
-          <p>{{ event.content }}</p>
-          <div class="tags">
-            @for (tag of event.tags; track tag) {
-            @if (tag[0] === 't') {
-            <span class="tag">#{{ tag[1] }}</span>
-            }
-            }
-          </div>
-        </mat-card-content>
-        <mat-card-actions>
-          <button mat-icon-button>
-            <mat-icon>favorite_border</mat-icon>
-          </button>
-          <button mat-icon-button>
-            <mat-icon>comment</mat-icon>
-          </button>
-          <button mat-icon-button>
-            <mat-icon>repeat</mat-icon>
-          </button>
-        </mat-card-actions>
-      </mat-card>
-      }
-    </div>
-    }
-
-    <!-- Following Section -->
-    @if (activeSection() === 'following') {
-    <div class="following-feed feed-container">
-      @for (event of filteredFollowing(); track event.id) {
-      <mat-card class="content-card">
-        <mat-card-header>
-          <div mat-card-avatar class="avatar"></div>
-          <mat-card-title>User {{ event.pubkey.substring(0, 8) }}</mat-card-title>
-          <mat-card-subtitle>{{ event.created_at | date:'medium' }}</mat-card-subtitle>
-          <div class="card-actions">
-            <button mat-icon-button [matMenuTriggerFor]="menu">
-              <mat-icon>more_vert</mat-icon>
-            </button>
-            <mat-menu #menu="matMenu">
-              <button mat-menu-item (click)="shareContent(event)">
-                <mat-icon>share</mat-icon>
-                <span>Share</span>
-              </button>
-              <button mat-menu-item (click)="bookmarkContent(event)">
-                <mat-icon>bookmark</mat-icon>
-                <span>Bookmark</span>
-              </button>
-            </mat-menu>
-          </div>
-        </mat-card-header>
-        <mat-card-content>
-          <p>{{ event.content }}</p>
-          <div class="tags">
-            @for (tag of event.tags; track tag) {
-            @if (tag[0] === 't') {
-            <span class="tag">#{{ tag[1] }}</span>
-            }
-            }
-          </div>
-        </mat-card-content>
-        <mat-card-actions>
-          <button mat-icon-button>
-            <mat-icon>favorite_border</mat-icon>
-          </button>
-          <button mat-icon-button>
-            <mat-icon>comment</mat-icon>
-          </button>
-          <button mat-icon-button>
-            <mat-icon>repeat</mat-icon>
-          </button>
-        </mat-card-actions>
-      </mat-card>
-      }
-    </div>
-    }
-
-    <!-- Media Section -->
-    @if (activeSection() === 'media') {
-    <div class="media-feed feed-container">
-      @for (event of filteredMedia(); track event.id) {
-      <mat-card class="content-card media-card">
-        <div class="media-placeholder">
-          <mat-icon>image</mat-icon>
         </div>
-        <mat-card-header>
-          <div mat-card-avatar class="avatar"></div>
-          <mat-card-title>User {{ event.pubkey.substring(0, 8) }}</mat-card-title>
-          <mat-card-subtitle>{{ event.created_at | date:'medium' }}</mat-card-subtitle>
-          <div class="card-actions">
-            <button mat-icon-button [matMenuTriggerFor]="menu">
-              <mat-icon>more_vert</mat-icon>
-            </button>
-            <mat-menu #menu="matMenu">
-              <button mat-menu-item (click)="shareContent(event)">
-                <mat-icon>share</mat-icon>
-                <span>Share</span>
-              </button>
-              <button mat-menu-item (click)="bookmarkContent(event)">
-                <mat-icon>bookmark</mat-icon>
-                <span>Bookmark</span>
-              </button>
-            </mat-menu>
-          </div>
-        </mat-card-header>
-        <mat-card-content>
-          <p>{{ event.content }}</p>
-          <div class="tags">
-            @for (tag of event.tags; track tag) {
-            @if (tag[0] === 't') {
-            <span class="tag">#{{ tag[1] }}</span>
+      </div>
+    }
+    
+    <!-- Columns Content -->
+    <div class="columns-content">
+      @for (column of columns(); track column.id; let i = $index) {
+        <div 
+          class="column" 
+          [class.visible]="i === visibleColumnIndex() || !isMobileView()"
+          [attr.aria-hidden]="isMobileView() && i !== visibleColumnIndex()"
+        >
+          <!-- Column Header (Mobile Only) -->
+          @if (isMobileView()) {
+            <div class="column-header-mobile">
+              <div class="column-header-content">
+                <mat-icon>{{ column.icon }}</mat-icon>
+                <span class="column-title">{{ column.label }}</span>
+                <div class="column-header-actions">
+                  <button mat-icon-button [matMenuTriggerFor]="columnMenuMobile" (click)="$event.stopPropagation()">
+                    <mat-icon>more_vert</mat-icon>
+                  </button>
+                  <mat-menu #columnMenuMobile="matMenu">
+                    <button mat-menu-item (click)="editColumn(i)">
+                      <mat-icon>edit</mat-icon>
+                      <span>Edit</span>
+                    </button>
+                    <button mat-menu-item (click)="removeColumn(i)">
+                      <mat-icon>delete</mat-icon>
+                      <span>Remove</span>
+                    </button>
+                  </mat-menu>
+                </div>
+              </div>
+            </div>
+          }
+          
+          <!-- Column Content with Individual Scrolling -->
+          <div class="column-scroll-container">
+            @if (isLoading() && (!columnContentLoaded()[column.id])) {
+              <div class="column-loading">
+                <mat-spinner diameter="40"></mat-spinner>
+                <p>Loading content...</p>
+              </div>
+            } @else {
+              <!-- Default placeholder content - replace with actual content -->
+              <div class="column-items">
+                <!-- Generate some mock items for each column -->
+                @for (j of [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]; track j) {
+                  <mat-card class="content-card">
+                    <mat-card-header>
+                      <div mat-card-avatar class="avatar"></div>
+                      <mat-card-title>{{ column.label }} Item {{ j }}</mat-card-title>
+                      <mat-card-subtitle>User{{ j }} • 2h ago</mat-card-subtitle>
+                    </mat-card-header>
+                    <mat-card-content>
+                      <p>This is an example post in the {{ column.label }} column. It demonstrates how content will appear in each column.</p>
+                      <div class="tags">
+                        <span class="tag">#nostr</span>
+                        <span class="tag">#example</span>
+                      </div>
+                    </mat-card-content>
+                    <mat-card-actions>
+                      <button mat-icon-button>
+                        <mat-icon>favorite_border</mat-icon>
+                      </button>
+                      <button mat-icon-button>
+                        <mat-icon>comment</mat-icon>
+                      </button>
+                      <button mat-icon-button>
+                        <mat-icon>repeat</mat-icon>
+                      </button>
+                    </mat-card-actions>
+                  </mat-card>
+                }
+              </div>
             }
-            }
           </div>
-        </mat-card-content>
-        <mat-card-actions>
-          <button mat-icon-button>
-            <mat-icon>favorite_border</mat-icon>
-          </button>
-          <button mat-icon-button>
-            <mat-icon>comment</mat-icon>
-          </button>
-          <button mat-icon-button>
-            <mat-icon>repeat</mat-icon>
-          </button>
-        </mat-card-actions>
-      </mat-card>
+        </div>
       }
     </div>
-    }
-  </div>
-
-  <!-- Bottom Action Bar -->
-  <div class="bottom-action-bar">
-    <button mat-fab color="primary" matTooltip="Create new post">
-      <mat-icon>add</mat-icon>
-    </button>
   </div>
 </div>
